# DesktopFileEditor

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.rs  run_with_test_files.sh
flatpak/: .gitignore  cargo-sources.json  com.argoware.desktop-file-editor.yml  update-cargo-deps.sh  update-cargo-sources.sh
resources/: desktop_file_group.blp  desktop_file_view.blp  list_entry.blp  resources.gresource.xml  sliding_search_entry.blp  style-dark.css  style.css  window.blp
src/: application.rs  flatpak.rs  main.rs  util.rs
src/desktop_file_view/: add_action_dialog.rs  add_locale_dialog.rs  close_confirm_dialog.rs  desktop_entry_ext.rs  known_entries.rs  languages.rs  mod.rs  string_entry_row.rs  util.rs
src/desktop_file_view/desktop_file_group/: icon_entry_row.rs  mod.rs  new_entry_dialog.rs  tagged_entry_row.rs  util.rs
src/shellparse/: mod.rs  steamutil.rs
src/window/: entry_filter.rs  file_entry.rs  list_entry.rs  mod.rs  sliding_search_entry.rs
test_files/: Age of Empires II (2013).desktop  Enlisted.desktop  MissingName-EmptyExec.desktop  io.bassi.Amberol.desktop  needs_admin.desktop  org.mozilla.firefox.desktop  org.mozilla.forefax.desktop
