[package]
name = "desktop-file-editor"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.7", package = "libadwaita", features = ["v1_7"] }
gtk = { version = "0.9", package = "gtk4", features = ["v4_16", "gnome_47", "blueprint"] }
once_cell = "1.18.0"
freedesktop-desktop-entry = "0.7"
zbus = "4.4.0"
notify = { version = "6.1.1", default-features = false }
async-channel = "2.3.1"
either = "1.13.0"
notify-debouncer-full = "0.3.1"
trash = { version = "5.1.1", default-features = false }
regex = "1.11.1"
which = "7.0.1"
const_format = { version = "0.2.34", optional = true }
serde = { version = "1.0.219", optional = true }
vdf-reader = { version = "0.3.1", optional = true }

[features]
default = ["steam"]
steam = ["vdf-reader", "const_format", "serde"]

[build-dependencies]
glib-build-tools = "0.18.0"
